--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,17 +1,14 @@
-<html>
-	<head>
-		{% if title %}
-		<title>{{ title }} - Partnership Portal</title>
-		{% else %}
-		<title>Welcome to the University Partnership Portal</title>
-		{% endif %}
-	</head>
-	<body>
-		<h1>Hello, {{ user.username }}! Welcome to the Portal.</h1>
-		{% for collab in collabs %}
-		<div><p><b>{{ collab.contact.username }} created a new partnership:</b>
-			<br>Name: {{ collab.name }}
-			<br>Location: {{ collab.city }}, {{ collab.country }}</p></div>
-		{% endfor %}
-	</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+	<h1>Hello, {{ user.username }}! Welcome to the Portal.</h1>
+	<h2>Partnership updates in your region or activity of interest</h2>
+
+	{% for collab in collabs %} <!-- for loop to display every object in list -->
+	<div><p><b>{{ collab.contact.username }} created a new partnership:</b>
+		<br>Name: {{ collab.name }}
+		<br>Location: {{ collab.city }}, {{ collab.country }}
+		<br>Type: {{ collab.type }} - {{ collab.level }}</p></div>
+	{% endfor %}
+	
+{% endblock %}
