--- a/app/templates/partner.html
+++ b/app/templates/partner.html
@@ -3,11 +3,6 @@
 {% block app_content %}
 
 	<head>
-	    <meta charset="UTF-8">
-	    <title>Flask-GoogleCharts Example</title>
-	    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-	    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	    {{ charts_init }}
 	</head>
 
 	<h1>Official Partnership Record - {{ collab.name }}</h1>
@@ -16,16 +11,16 @@
 		<div class="container-fluid">
         <!-- Example row of columns -->
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-2">
             <h2>Key information</h2>
 			<br><b>Location:</b> {{ collab.city }}, {{ collab.country }}
 			<br><b>Owner:</b> {{ collab.owner }}
 			<br><b>Primary contact:</b> {{ collab.contact.userid }}
 			<br><b>Type:</b> {{ collab.ptype }}
 			<br><b>Date established:</b> {{ collab.created_date }} </p>
-            <p><a class="btn btn-secondary" href="#" role="button">Edit details &raquo;</a></p>
+            <a class="btn btn-secondary" href="#" role="button">Edit details &raquo;</a>
           </div>
-                  <div class="col-md-4">
+          <div class="col-md-4">
             <h2>Agreement details</h2>
             <table class="table">
 			  <thead>
@@ -46,16 +41,16 @@
 
 			  </tbody>
 			</table>
-            <p><a class="btn btn-secondary" href="#" role="button">Agreement details &raquo;</a></p>
-          </div>
-          <div class="col-md-4">
+			<p><a class="btn btn-secondary" href="#" role="button">Agreement details &raquo;</a></p>
+			</div>
+          	
+
+          	<div class="col-md-4">
             <h2>Mobility data</h2>
             <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTef5yGrK_cSzk63ZpbL2lYxWSGO1Rnlhrnz1CpAsUFU_g9HCnzMu8K3dJKFdh1MsvEDdMhdgSIp95Z/pubchart?oid=1044603541&amp;format=interactive"></iframe>
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div>
         </div>
-  
-          
 
 	</body>
 {% endblock %}
