Add dynamic routing for 'Partner' page

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -6,7 +6,7 @@
 
 	{% for collab in collabs %} <!-- for loop to display every object in list -->
 	<div><p><b>{{ collab.contact.userid }} created a new partnership:</b>
-		<br>Name: <a href="{{ url_for('partner') }}">{{ collab.name }}</a>
+		<br>Name: <a href="{{ url_for('partner', id=collab.id) }}">{{ collab.name }}</a>
 		<br>Location: {{ collab.city }}, {{ collab.country }}
 		<br>Type: {{ collab.ptype }}</p></div>
 	{% endfor %}
