--- a/app/templates/partner.html
+++ b/app/templates/partner.html
@@ -9,25 +9,27 @@
 	<h3><i>Official name: {{ partner.offname }}</i></h3>
 	<body>
 		<div class="container-fluid">
-        <!-- Example row of columns -->
         <div class="row">
           <div class="col-md-2">
             <h2>Key information</h2>
 			<br><b>Location:</b> {{ partner.city }}, {{ partner.country }}
-			<br><b>Owner:</b> {{ partner.owner }}
-			<br><b>Primary contact:</b> {{ partner.contact.userid }}
+			<br><b>Owner:</b> {{ user.userid }}
+			
 			<br><b>Type:</b> {{ partner.ptype }}
-			<br><b>Date established:</b> {{ partner.created_date }} </p>
+			<br><b>Date created:</b> {{ partner.created_date }} </p>
             <a class="btn btn-secondary" href="#" role="button">Edit details &raquo;</a>
           </div>
           <div class="col-md-4">
             <h2>Agreement details</h2>
+
+            {% if agrees %}
             <table class="table">
 			  <thead>
 			    <tr>
 			      <th scope="col">#</th>
 			      <th scope="col">Type</th>
-			      <th scope="col">Status</th>
+			      <th scope="col">Start</th>
+			      <th scope="col">End</th>
 			    </tr>
 			  </thead>
 			  <tbody>
@@ -35,20 +37,28 @@
 			    <tr>
 			    	<th scope="row">{{ a.id }}</th>
 			    	<td>{{ a.atype }}</td>
-			     	<td>{{ a.status }}</td>
+			     	<td>{{ a.start_date }}</td>
+			     	<td>{{ a.end_date }}</td>
 				</tr>
 			    {% endfor %}
-
 			  </tbody>
 			</table>
-			<p><a class="btn btn-secondary" href="#" role="button">Agreement details &raquo;</a></p>
+			<p><a class="btn btn-secondary" href="{{ url_for('viewagrees', id=partner.id) }}" role="button">View all agreement details &raquo;</a>
+			<br><a class="btn btn-secondary" href="{{ url_for('addagree', id=partner.id) }}" role="button">Add a new agreement &raquo;</a></p>
+			{% else %}
+			<br>
+			<p>There are no active agreements with this organisation.</p>
+			<p><a class="btn btn-secondary" href="{{ url_for('addagree', id=partner.id) }}" role="button">Add a new agreement &raquo;</a></p>
+			{% endif %}
+			
 			</div>
           	
 
           	<div class="col-md-4">
             <h2>Mobility data</h2>
             <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTef5yGrK_cSzk63ZpbL2lYxWSGO1Rnlhrnz1CpAsUFU_g9HCnzMu8K3dJKFdh1MsvEDdMhdgSIp95Z/pubchart?oid=1044603541&amp;format=interactive"></iframe>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <br><a class="btn btn-secondary" href="{{ url_for('addmobility') }}" role="button">Add mobility data &raquo;</a>
+            <br><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
           </div>
         </div>
 
