--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-	<h1>Hello, {{ current_user.userid }}! Welcome to the Portal.</h1>
-	<h2><a href="{{ url_for('dashboard', userid=current_user.userid) }}">View your partnership dashboard</a></h2>
+	<h1>UCL Global Partnership Portal</h1>
+	<h2>Welcome {{ current_user.userid }}<a href="{{ url_for('dashboard', userid=current_user.userid) }}">: View your partnership dashboard</a></h2>
 	<body>
 		<br><a href="{{ url_for('newpartner') }}">Add new partner</a>
 	
