--- a/app/templates/addvisit.html
+++ b/app/templates/addvisit.html
@@ -14,16 +14,17 @@
 			{% endfor %}
 		</p>
 		<p>
-			{{ form.date.label }}<br>
-			{{ form.date }}<br>
-			{% for error in form.date.errors %}
+			{{ form.start_date.label }}<br>
+			{{ form.start_date }}<br>
+			{% for error in form.start_date.errors %}
 			<span style="colour: red;">[{{ error }}]</span>
 			{% endfor %}
 		</p>
+
 		<p>
-			{{ form.report.label }}<br>
-			{{ form.report(size=60, maxlength=500) }}<br>
-			{% for error in form.report.errors %}
+			{{ form.end_date.label }}<br>
+			{{ form.end_date }}<br>
+			{% for error in form.end_date.errors %}
 			<span style="colour: red;">[{{ error }}]</span>
 			{% endfor %}
 		</p>
