--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 
+
+{% block title %}
+	Dashboard
+{% endblock %}
+
 {% block app_content %}
+
 	<h1>Hello, {{ current_user.userid }}! Welcome to the Portal.</h1>
 	<h2>Partnership updates in your region or activity of interest</h2>
 
