--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,25 +5,11 @@
 {% block app_content %}
 	
 	<h1>Log in</h1>
-	<form action="" method="post" novalidate><!-- <form> element is a container for the web form -->
-		{{ form.hidden_tag() }} <!-- hidden tag works with secret key to catch CSRF attacks -->
-		<p>
-			{{ form.userid.label }}<br>
-			{{ form.userid(size=32) }}
-			{% for error in form.userid.errors %} <!-- logic to display errors in form validation -->
-			<span style="color: red;">[{{ error }}]</span>
-			{% endfor %}
-		</p>
-		<p>
-			{{ form.password.label }}<br>
-			{{ form.password(size=32) }}
-			{% for error in form.password.errors %} <!-- logic to display errors in form validation -->
-			<span style="color: red;">[{{ error }}]</span>
-			{% endfor %}
-		</p>
-		<p>{{ form.remember() }} {{form.remember.label }}</p>
-		<p>{{ form.submit() }}</p>
-	</form>
+    <div class="row">
+        <div class="col-md-4">
+            {{ wtf.quick_form(form) }}
+        </div>
+    </div>
 	<hr>
 	<p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
 {% endblock %}
