--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -47,5 +47,14 @@
 			<br>
 			<p>There are no partners that meet your search criteria.</p>
 			{% endif %}
-			
+<!-- Edit this pagination block -->
+	<nav aria-label="Page navigation example">
+  		<ul class="pagination">
+		    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+		    <li class="page-item"><a class="page-link" href="#">1</a></li>
+		    <li class="page-item"><a class="page-link" href="#">2</a></li>
+		    <li class="page-item"><a class="page-link" href="#">3</a></li>
+		    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+	  </ul>
+	</nav>
 {% endblock %}
