--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -2,7 +2,7 @@
 
 {% block app_content %}
 
-	<h1>Hello, {{ current_user.userid }}! Welcome to the Portal.</h1>
+	<h1>Hello, {{ current_user.fname }}! Welcome to the Portal.</h1>
 	<h2>Partnership updates in your region or activity of interest</h2>
 
 	{% for collab in collabs %} <!-- for loop to display every object in list -->
