--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -1,17 +1,34 @@
 {% extends "base.html" %}
 
-
 {% block app_content %}
-	<body background="https://i.imgur.com/E9E1A4e.jpg">
-	<div class="jumbotron">
-	  <h1 class="display-4">Welcome to UCL UniGO - your window on the world.</h1>
-	  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-	  <hr class="my-4">
-	  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-	  <p class="lead">
-	    <a class="btn btn-primary btn-lg" href="{{ url_for('login') }}" role="button">Log in</a>
-	  </p>
-	</div>
+	
+	<head>
+		<style type="text/css">
+			#jumbo {
+				background: rgba(255, 255, 255, 0.6);}
+
+			body {
+				background-image: url("https://images.unsplash.com/photo-1521295121783-8a321d551ad2?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=686e4856c06faee93838d73a7b9edfc9&auto=format&fit=crop&w=1050&q=80");
+				height: 100%;
+			    background-position: center;
+			    background-repeat: no-repeat;
+			    background-size: cover;				}
+			}
+
+
+		</style>
+	</head>
+
+	<body>
+		<div class="jumbotron" id="jumbo">
+		  <h1 class="display-4">Welcome to UniGO - your window on the world.</h1>
+		  	<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+		  	<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+		  	<p class="lead">
+			<a class="btn btn-primary btn-lg" href="{{ url_for('login') }}" role="button">Log in</a>
+			</p>
+		</div>
 	</body>
 
 {% endblock %}
+
