--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -4,13 +4,32 @@
 <!-- form object is passed to the template by the login view function -->
 
 {% block app_content %}
-	
-	<h1>Search for a partner</h1>
-    <div class="row">
-        <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
-        </div>
-    </div>
+
+	<head>
+		<style type="text/css">
+			#searchbar {
+				background: rgba(255, 255, 255, 0.6);
+				padding-bottom: 20px;
+			}
+
+			body {
+				height: 100%;
+			    background-position: center;
+			    background-repeat: no-repeat;
+			    background-size: cover;				}
+			}
+
+
+		</style>
+	</head>
+	<div class="container-fluid" id="searchbar">
+		<h1>Search for a partner</h1>
+    		<div class="row">
+        		<div class="col-md-4">
+            		{{ wtf.quick_form(form) }}
+        		</div>
+    		</div>
+    	</div>
 	<hr>
 
 
