--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,7 +25,7 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="{{ url_for('index') }}">Home</a></li>
+                    <li><a href="{{ url_for('landing') }}">Home</a></li>
 
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_anonymous %}
@@ -43,6 +43,20 @@
 {% endblock %}
 
 {% block content %}
+
+    <head>
+        <style type="text/css">
+            body {
+                background-image: url("https://images.unsplash.com/photo-1481627834876-b7833e8f5570?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=7857ea46fded9c0fcb5b65b9a20a41d9&auto=format&fit=crop&w=1741&q=80");
+                height: 100%;
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+                padding-top: 20px
+                }
+
+        </style>
+    </head>
     <div class="container-fluid">
 
         {% with messages = get_flashed_messages() %}
