--- a/app/templates/editpartner.html
+++ b/app/templates/editpartner.html
@@ -20,7 +20,7 @@
 		</style>
 	</head>
 	<div class="container-fluid" id="searchbar">
-		<h1>Add new partner</h1>
+		<h1>Edit partner</h1>
     		<div class="row">
         		<div class="col-md-4">
             		{{ wtf.quick_form(form) }}
