--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -5,28 +5,35 @@
 	<head>
 		<style type="text/css">
 			#jumbo {
-				background: rgba(255, 255, 255, 0.6);}
-
-			body {
-				background-image: url("https://images.unsplash.com/photo-1521295121783-8a321d551ad2?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=686e4856c06faee93838d73a7b9edfc9&auto=format&fit=crop&w=1050&q=80");
-				height: 100%;
-			    background-position: center;
-			    background-repeat: no-repeat;
-			    background-size: cover;				}
+				background: rgba(255, 255, 255, 0);
+				text-align: center;
+				min-height: 100%;
 			}
 
+			body {
+				background-image: url("https://images.unsplash.com/photo-1481627834876-b7833e8f5570?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=7857ea46fded9c0fcb5b65b9a20a41d9&auto=format&fit=crop&w=1741&q=80");
+				height: 100%;
+				background-size: cover;
+			    background-position: center;
+			    background-repeat: no-repeat;
+			    color: white;
+				}
 
 		</style>
 	</head>
 
 	<body>
 		<div class="jumbotron" id="jumbo">
-		  <h1 class="display-4">Welcome to UniGO - your window on the world.</h1>
-		  	<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-		  	<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-		  	<p class="lead">
-			<a class="btn btn-primary btn-lg" href="{{ url_for('login') }}" role="button">Log in</a>
-			</p>
+			<div class="container-fluid" id="cont">
+	        	<div class="row">
+	        		<img src="https://s15.postimg.cc/wfesqe8pn/Unseen-_Uni-_Logo.png">
+			  		<h1 class="display-4">Welcome to UniGO</h1>
+			  		<p class="lead">Log in to connect with the world.</p>
+			  		<p class="lead">
+					<a class="btn btn-primary btn-lg" href="{{ url_for('login') }}" role="button">Log in</a>
+					</p>
+				</div>
+			</div>
 		</div>
 	</body>
 
