--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,9 +12,19 @@
 			    color: white;
 			    padding-top: 20px
 				}
+			#inner-container {
+				padding-top: 20px;
+				padding-bottom: 20px;
+				border-radius: 25px;
+				background-color: rgba(255, 255, 255, 0.7);
+				width: 70%;
+			}
+
 			#main-container {
 				padding-top: 20px;
+			
 			}
+
 
 		</style>
 	</head>
@@ -22,20 +32,24 @@
 <div class="container" id="main-container">
 	<div class="row">
 		<div class="col-md-6">
-			<center>
-				<img src="https://s19.postimg.cc/yu8ntqo1f/magnifier-tool-on-earth-globe.png" width="200" height="200" align="middle">
-				<br>
-				<br>
-				<p><button type="button" class="btn btn-primary" href="{{ url_for('search') }}">Find a partner</button></p>
-			</center>
+			<div class="container" id="inner-container">
+				<center>
+					<a href="{{ url_for('search') }}"><img src="https://s19.postimg.cc/yu8ntqo1f/magnifier-tool-on-earth-globe.png" width="200" height="200" align="middle"></a>
+					<br>
+					<br>
+					<p><a type="button" class="btn btn-primary" href="{{ url_for('search') }}">Find a partner</a></p>
+				</center>
+			</div>
 		</div>
 		<div class="col-md-6">
-			<center>
-				<img src="https://s19.postimg.cc/41bcpehnn/edit-_1.png" width="200" height="200" align="middle">
-				<br>
-				<br>
-				<p><button type="button" class="btn btn-primary" href="{{ url_for('newpartner') }}">Add a partner</button></p>
-			</center>
+			<div class="container" id="inner-container">
+				<center>
+					<a href="{{ url_for('newpartner') }}"><img src="https://s19.postimg.cc/41bcpehnn/edit-_1.png" width="200" height="200" align="middle"></a>
+					<br>
+					<br>
+					<p><a type="button" class="btn btn-primary" href="{{ url_for('newpartner') }}">Add a partner</a></p>
+				</center>
+			</div>
 		</div>
 <!-- 		<div class="col-md-4">
 			<center>
