--- a/app/templates/addmobility.html
+++ b/app/templates/addmobility.html
@@ -1,40 +1,35 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-	<h2>Input mobility details for {{ partner }} - {{ atype }}</h2>
-	<form action="" method="post">
-		{{ form.hidden_tag() }}
-		<p>
-			{{ form.mobilitytype.label }}<br>
-			{{ form.mobilitytype }}<br>
-			{% for error in form.mobilitytype.errors %}
-			<span style="color: red;">[{{ error }}]</span>
-			{% endfor %}
-		</p>
-		<p>
-			{{ form.academicyear.label }}<br>
-			{{ form.academicyear }}<br>
-			{% for error in form.academicyear.errors %}
-			<span style="color: red;">[{{ error }}]</span>
-			{% endfor %}
-		</p>
-		<p>
-			{{ form.level.label }}<br>
-			{{ form.level }}<br>
-			{% for error in form.level.errors %}
-			<span style="colour: red;">[{{ error }}]</span>
-			{% endfor %}
-		</p>
-		<p>
-			{{ form.totalmobs.label }}<br>
-			{{ form.totalmobs(size=28) }}<br>
-			{% for error in form.totalmobs.errors %}
-			<span style="colour: red;">[{{ error }}]</span>
-			{% endfor %}
-		</p>
 
-		<p>{{ form.submit() }}</p>
-		
-	</form>
+	<head>
+		<style type="text/css">
+			#container {
+				background: rgba(255, 255, 255, 0.9);
+				padding-bottom: 40px;
+				padding-left: 40px;
+			}
+
+			body {
+				height: 100%;
+			    background-position: center;
+			    background-repeat: no-repeat;
+			    background-size: cover;
+			}
+
+
+		</style>
+	</head>
+
+	<body>
+		<div class="container-fluid" id="container">
+			<div class="col-md-6">
+				<h2>Input mobility details for {{ partner.name }} - {{ atype }}</h2>
+					<br>
+		        	{{ wtf.quick_form(form) }}
+	       	</div>
+    	</div>
+    </body>
+	
 {% endblock %}
 
