--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,9 +4,6 @@
 {% block title %}
 	{% if title %}{{ title }} - UniGO {% else %}Welcome to UCL UniGO{% endif %}
 {% endblock %}
-{% block favicon %}
-<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-{% endblock %}
 
 {% block navbar %}
 
@@ -31,7 +28,7 @@
                     {% if current_user.is_anonymous %}
                     <li><a href="{{ url_for('login') }}">Login</a></li>
                     {% else %}
-                    <li><a href="{{ url_for('dashboard', userid=current_user.userid) }}">Dashboard</a></li>
+                    
                     <li><a href="{{ url_for('search', userid=current_user.userid) }}">Search</a></li>
                     <li><a href="{{ url_for('logout') }}">Logout</a></li>
                     <li><a href="#">Logged in as {{ current_user.sname }}, {{ current_user.fname }}</a></li>
@@ -55,7 +52,11 @@
                 padding-top: 20px
                 }
 
+
         </style>
+
+        <link rel="icon" type="image/png" href="http://example.com/myicon.png">
+
     </head>
     <div class="container-fluid">
 
