--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,47 +1,30 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-	<h1>Register</h1>
-	<form action="" method="post">
-		{{ form.hidden_tag() }}
+	<head>
+		<style type="text/css">
 
-		<p>
-			{{ form.fname.label }}<br>
-			{{ form.fname(size=32) }}<br>
-			{% for error in form.fname.errors %}
-			<span style="color: red;">[{{ error }}]</span>
-			{% endfor %}
-		</p>
-		<p>
-			{{ form.sname.label }}<br>
-			{{ form.sname(size=32) }}<br>
-			{% for error in form.sname.errors %}
-			<span style="color: red;">[{{ error }}]</span>
-			{% endfor %}
-		</p>
-		<p>
-			{{ form.email.label }}<br>
-			{{ form.email(size=64) }}<br>
-			{% for error in form.email.errors %}
-			<span style="colour: red;">[{{ error }}]</span>
-			{% endfor %}
-		</p>
-		<p>
-			{{ form.password.label }}<br>
-			{{ form.password(size=32) }}<br>
-			{% for error in form.password.errors %}
-			<span style="colour: red;">[{{ error }}]</span>
-			{% endfor %}
-		</p>
-		<p>
-			{{ form.password2.label }}<br>
-			{{ form.password2(size=32) }}<br>
-			{% for error in form.password2.errors %}
-			<span style="colour: red;">[{{ error }}]</span>
-			{% endfor %}
-		</p>
-		<p>{{ form.submit() }}</p>
-	</form>
+			#container {
+			    border-radius: 25px;
+			    background: rgba(255, 255, 255, 0.6);
+			    padding: 20px; 
+			    padding-bottom: 40px;
+			    height: 100%;
+
+			}
+
+
+		</style>
+	<body>
+
+
+		<div class="container-fluid" id="container">
+			<div class="col-md-4">
+				<h1>Register</h1>
+				<div class="form">{{ wtf.quick_form(form) }}</div>
+			</div>
+		</div>
+	</body>
 {% endblock %}
 
 
